# multiroom

./: .gitignore
app/: forge.config.ts  package.json
artifacts/launcher-cpp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
artifacts/launcher-cpp/lib/: libportaudio.so.19.8  libportaudio.so.2  libspdlog.so.1.15.3
artifacts/launcher-cpp/libs/abseil-cpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/abseil-cpp/absl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/abseil-cpp/absl/algorithm/: CTestTestfile.cmake  Makefile  (+1 more)
artifacts/launcher-cpp/libs/argparse/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/json/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/portaudio/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  portaudio-2.0.pc
artifacts/launcher-cpp/libs/snapcast/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/snapcast/client/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/snapcast/common/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/snapcast/server/: Makefile  cmake_install.cmake
artifacts/launcher-cpp/libs/spdlog/: Makefile  cmake_install.cmake
backend/native/: CMakeLists.txt
backend/native/health_checker/: InternalHealthChecker.cpp  TcpHealthChecker.cpp  TcpHealthChecker.hpp
backend/native/launcher/: App.cpp  Launcher.cpp  Launcher.hpp
backend/native/libs/portaudio/src/common/: pa_cpuload.c
backend/native/libs/snapcast/: CMakeLists.txt
backend/native/libs/snapcast/client/decoder/: opus_decoder.hpp
backend/native/libs/spdlog/include/spdlog/: spdlog.h
backend/native/libs/spdlog/include/spdlog/fmt/bundled/: args.h
backend/native/modules/: IModule.hpp
backend/native/modules/loopback/: AudioLoopbackModule.cpp  AudioLoopbackModule.hpp  IAudioLoopbackModule.hpp  PulseAudioLoopbackModule.cpp  PulseAudioLoopbackModule.hpp
backend/native/modules/manager/: ModuleManager.cpp  ModuleSession.hpp
backend/native/modules/router/: AudioRouterModule.cpp
backend/native/modules/server/: ServerModule.cpp
backend/native/modules/snapclient/: SnapclientModule.cpp  SnapclientModule.hpp
backend/native/path/: Path.hpp
backend/native/services/: IService.hpp  PulseMainloopService.hpp
backend/native/settings/: Settings.hpp  SettingsObservable.cpp  SettingsObservable.hpp  SettingsReader.cpp  SettingsReader.hpp
backend/native/stream/: FIFOAudioSinkStream.hpp  IAudioSourceStream.hpp  IAudioStream.hpp  PortAudioSourceStream.cpp
backend/native/tests/: AudioRouterModuleTests.cpp  LoggerFactoryTests.cpp  ModuleManagerTests.cpp  PathTests.cpp  PulseMainloopServiceTests.cpp  ServerModuleTests.cpp  SnapserverModuleTests.cpp  TCPHealthCheckerTests.cpp  Tests.hpp
backend/native/util/: Executor.cpp  Executor.hpp  Port.cpp  Port.hpp
backend/server/: go.mod  server.go
config/: snapserver.conf
electron-app/: electron-builder.yml  package-lock.json
electron-app/src/: index.ts
front/: eslint.config.js  package-lock.json  vite.config.ts
front/src/: App.css  App.tsx  dispatcher.ts  mediaSession.ts  snapcontrol.ts  snapstream.ts
front/src/components/: AudioCard.tsx  IconButton.tsx  MasterPlayerBar.tsx  Sidebar.tsx  StartedProvider.tsx  VolumeSlider.tsx
front/src/context/: ConfigurationContext.ts  StartedContext.tsx
front/src/hooks/: useControl.ts
front/src/logger/: Logger.ts  LoggerFactory.ts
front/src/notifier/: notifier.ts
front/src/pages/: MainPage.tsx  Settings.tsx  WelcomePage.tsx
front/src/services/: ControlService.ts  SnapcastService.ts
front/src/store/: configurationSlice.ts  controlSlice.ts  masterPlayerSlice.ts  snapcastSlice.ts  store.ts
front/src/store/selectors/: snapcastSelector.ts
front/src/types/: ServerConfig.ts
launcher-cpp/: CMakeLists.txt
launcher-cpp/health_checker/: HealthStatus.hpp  IHealthChecker.hpp  InternalHealthChecker.hpp
launcher-cpp/launcher/: App.cpp  Launcher.cpp
launcher-cpp/libs/snapcast/client/: CMakeLists.txt
launcher-cpp/libs/snapcast/client/browseZeroConf/: browse_bonjour.hpp
launcher-cpp/libs/snapcast/client/player/: player.hpp
launcher-cpp/libs/snapcast/server/publishZeroConf/: publish_bonjour.hpp
launcher-cpp/libs/spdlog/include/spdlog/: async_logger.h  logger-inl.h
launcher-cpp/logger/: LoggerFactory.cpp  LoggerFactory.hpp
launcher-cpp/modules/: ModuleDescription.hpp
launcher-cpp/modules/manager/: ModuleManager.hpp
launcher-cpp/modules/router/: AudioRouterModule.hpp  IAudioRouterModule.hpp
launcher-cpp/modules/server/: ServerModule.hpp
launcher-cpp/modules/snapserver/: SnapserverModule.cpp  SnapserverModule.hpp
launcher-cpp/path/: Path.hpp
launcher-cpp/services/: PulseMainloopService.cpp  Services.hpp
launcher-cpp/settings/: ModuleParams.hpp  Settings.cpp  Settings.hpp
launcher-cpp/stream/: AudioChunk.hpp  FIFOAudioSinkStream.cpp  IAudioSinkStream.hpp  PortAudioSourceStream.hpp
launcher-cpp/tests/: AudioLoopbackModuleTests.cpp  ExecutorTests.cpp  FIFOAudioSinkStreamTests.cpp  InternalHealthCheckerTests.cpp  LinuxProcessTests.cpp  PathTests.cpp  PortAudioSourceStreamTests.cpp  PortTests.cpp  ServicesTests.cpp  SettingsTests.cpp  SnapclientModuleTests.cpp
launcher-cpp/util/: IProcess.hpp  LinuxProcess.cpp  LinuxProcess.hpp  Port.hpp  Process.cpp  Process.hpp  ProcessInfo.cpp  ProcessInfo.hpp
local/scripts/: build-all.sh  native.sh  stats.sh
scripts/: clear.sh
web-react/: package.json  pnpm-lock.yaml  vite.config.ts
web-react/artifacts/web-react/: index.html
web-react/artifacts/web-react/assets/: index-D11Kdv0J.css  index-DLGBSJfb.js
web-react/src/: App.tsx  mediaSession.ts  snapstream.ts
web-react/src/components/: Group.tsx  MuteButton.tsx  Sidebar.tsx  StreamsList.tsx
web-react/src/hooks/: useLogger.ts  useMasterPlayer.ts  useSnapcast.ts
web-react/src/notifier/: notifier.ts
web-react/src/pages/: Main.tsx
web-react/src/services/: SnapcastService.ts
web-react/src/store/: configurationSlice.ts  controlSlice.ts  snapcastSlice.ts
(+64 files in other folders)
